syntax = "proto3";

package models;
option go_package="code.cloudfoundry.org/locket/models";

import "bbs.proto";

service ProtoLocket {
  rpc ProtoLock(ProtoLockRequest) returns (ProtoLockResponse) {}
  rpc ProtoFetch(ProtoFetchRequest) returns (ProtoFetchResponse) {}
  rpc ProtoRelease(ProtoReleaseRequest) returns (ProtoReleaseResponse) {}
  rpc ProtoFetchAll(ProtoFetchAllRequest) returns (ProtoFetchAllResponse) {}
}

enum ProtoTypeCode {
  UNKNOWN = 0 [(bbs.bbs_enumvalue_customname) = "UNKNOWN"];
  LOCK = 1 [(bbs.bbs_enumvalue_customname) = "LOCK"];
  PRESENCE = 2 [(bbs.bbs_enumvalue_customname) = "PRESENCE"];
}

message ProtoResource {
  string key = 1;
  string owner = 2;
  string value = 3;
  string type = 4 [deprecated=true];
  ProtoTypeCode type_code = 5;
}

message ProtoLockRequest {
  ProtoResource resource = 1;
  int64 ttl_in_seconds = 2;
}

message ProtoLockResponse {}

message ProtoReleaseRequest {
  ProtoResource resource = 1;
}

message ProtoReleaseResponse {}

message ProtoFetchRequest {
  string key = 1;
}

message ProtoFetchResponse {
  ProtoResource resource = 1;
}

message ProtoFetchAllRequest {
  string type = 1 [deprecated=true];
  ProtoTypeCode type_code = 2;
}

message ProtoFetchAllResponse {
  repeated ProtoResource resources = 1;
}
